# Condensed-Matter-Lab-Spring-2026-

./: .gitignore  pyproject.toml
Heat Capacity Kit/: config.json  script.py
Heat Capacity Kit/data/: aluminum_data.csv  brass_data.csv  calibration_silver.csv  copper_data.csv
Heat Capacity Kit/final/: experiment_summary.txt
Heat Capacity Kit/sample_data/: calibration_silver.csv  copper_data.csv
Paramagnetic Susceptibility/: config.json  script.py
Paramagnetic Susceptibility/final/: report.txt
Thermoelectric Effect/: config.json  script.py
Thermoelectric Effect/data/: readings.csv
Thermoelectric Effect/final/: analysis_report.txt  detailed_data_table.tex
Thermoelectric Effect/sample_data/: readings.csv
curie_temperature/: analysis.py  plotting.py  utils.py
curie_temperature/data/: SC1_22nF_raw_data.csv  SC2_updated_full_to_157C.csv
lattice-dynamics/: main.py
lattice-dynamics/config/: parameters.yaml
lattice-dynamics/data/: experimental_data.csv  simulated_acoustic.csv  simulated_monatomic.csv  simulated_optical.csv
lattice-dynamics/scripts/: diatomic.py  dispersion.py  monatomic.py  utils.py
